# exec-rest-api

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: operations.md
docs/superpowers/plans/: 2026-05-28-execution-rest-api-computed-and-rlp.md  2026-05-28-execution-rest-api-foundation.md  2026-05-28-execution-rest-api-observability-and-release.md  2026-05-28-execution-rest-api-streams.md  roadmap.md
docs/superpowers/specs/: 2026-05-28-execution-rest-api-design.md  2026-05-28-execution-rest-api-implementation-design.md  2026-05-28-execution-rest-api-openapi.yaml
scripts/: run.sh
src/exec_rest_api/: __init__.py  __main__.py  abi_revert.py  block_id.py  block_resolve.py  chain_head.py  config.py  content_neg.py  cursor.py  delegation.py  encoding.py  errors.py  metrics.py  pagination.py  server.py  sse.py  subscriptions.py  upstream.py  upstream_ws.py
src/exec_rest_api/handlers/: accounts.py  blocks.py  chain.py  computed.py  gas.py  health.py  logs.py  metrics.py  streams.py  traces.py  transactions.py  utils_keccak.py
tests/: conftest.py
tests/conformance/: conftest.py  test_endpoints.py  test_streams.py
tests/integration/: conftest.py  test_accounts.py  test_blocks.py  test_chain.py  test_computed.py  test_gas.py  test_health.py  test_logs.py  test_metrics.py  test_streams.py  test_traces.py  test_transactions.py
tests/unit/: test_abi_revert.py  test_block_id.py  test_block_resolve.py  test_chain_head.py  test_config.py  test_content_neg.py  test_cursor.py  test_delegation.py  test_encoding.py  test_errors.py  test_handlers_accounts.py  test_handlers_blocks.py  test_handlers_chain.py  test_handlers_computed.py  test_handlers_gas.py  test_handlers_health.py  test_handlers_logs.py  test_handlers_metrics.py  test_handlers_streams.py  test_handlers_traces.py  test_handlers_transactions.py  test_handlers_utils_keccak.py  test_metrics.py  test_pagination.py  test_server.py  test_sse.py  test_subscriptions.py  test_upstream.py  test_upstream_ws.py
