[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exec-rest-api"
version = "0.1.0"
description = "REST + SSE proxy in front of Ethereum execution clients."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Adrian Sutton", email = "adrian@symphonious.net" }]
dependencies = [
  "aiohttp>=3.9,<4",
]

[project.scripts]
exec-rest-api = "exec_rest_api.__main__:main"

[project.urls]
Homepage = "https://github.com/ajsutton/exec-rest-api"

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "pytest-aiohttp>=1.0",
  "hypothesis>=6",
  "ruff>=0.5",
  "mypy>=1.10",
  "pip-tools>=7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "ASYNC", "S", "PIE", "RET", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106"]  # asserts and hardcoded test secrets are fine in tests

[tool.mypy]
strict = true
python_version = "3.10"
mypy_path = "src"
packages = ["exec_rest_api"]
